Removed media queries and instead used responsive design to make the website suitable for differnet screen sizes (flex box, vh and vw)

--- a/disorders.html
+++ b/disorders.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>StandForUkraine</title>
+    <title>StandForUkraine | Disorders</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="favicon.png" type="image/x-icon">
 </head>
 <body>
     <header>
         <div class="header-content">
             <h1>#standforukraine</h1>
         </div>
-        <a href="index.html">Back to Home</a>
+        <a href="index.html"><span class="backtohome">Back to Home</span></a>
     </header>
     <main>
         <div class="banner">
@@ -20,10 +21,10 @@
                 <h1>Chronic stress impacts</h1>
                 <h1>both physical and </h1>
                 <h1>mental health</h1>
+                <div class="caption">
+                  <p>A local resident walks by a bilding recently hit by an airstrike, unfazed. <br><small>Photo by Marcus Yam</small></p>
+              </div>
             </div>
-            <div class="caption">
-              <p>A local resident walks by a bilding recently hit by an airstrike, unfazed. <br><small>Photo by Marcus Yam</small></p>
-          </div>
             <div class="learnmore">
                 <h2>Explore the pages below to learn more:</h2>
             </div>
