--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>StandForUkraine</title>
+    <title>StandForUkraine | Home</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="favicon.png" type="image/x-icon">
 </head>
 <body>
     <header>
         <div class="header-content">
             <h1>#standforukraine</h1>
         </div>
-        <a href="index.html"><b>Home</b></a>
     </header>
     <main>
         <div class="banner">
@@ -21,9 +21,9 @@
                 <h1>On 24 February, 2022</h1>
                 <h1>100,000 Ukrainians</h1>
                 <h1>became refugees</h1>
-            </div>
-            <div class="caption">
-                <p>Georgiy Keburia says goodbye to his wife Maya and their children as they escape Ukraine on a refuge train.<br><small>Photo by Salwan Georges</small></p>
+                <div class="caption">
+                    <p>Georgiy Keburia says goodbye to his wife Maya and their children as they escape Ukraine on a refuge train.<br><small>Photo by Salwan Georges</small></p>
+                </div>
             </div>
             <div class="learnmore">
                 <h2>Explore the pages below to learn more:</h2>
