--- a/management.html
+++ b/management.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>StandForUkraine</title>
+    <title>StandForUkraine | Management</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="favicon.png" type="image/x-icon">
 </head>
 <body>
     <header>
         <div class="header-content">
             <h1>#standforukraine</h1>
         </div>
-        <a href="index.html">Back to Home</a>
+        <a href="index.html"><span class="backtohome">Back to Home</span></a>
     </header>
     <main>
         <div class="banner">
@@ -20,10 +21,11 @@
                 <h1>Ukrainian Refugees</h1>
                 <h1>experince more stress than</h1>
                 <h1>any other</h1>
+                <div class="caption">
+                  <p>A rainbow behind a recently destroyed apartment building in Borodianka, Ukraine. <small><br>Photo by Paula Bronstein</small></p>
+                </div>
             </div>
-            <div class="caption">
-              <p>A rainbow behind a recently destroyed apartment building in Borodianka, Ukraine. <small><br>Photo by Paula Bronstein</small></p>
-            </div>
+
             <div class="learnmore">
                 <h2>Explore the pages below to learn more:</h2>
             </div>
