--- a/stress.html
+++ b/stress.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>StandForUkraine</title>
+    <title>StandForUkraine | Stress</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="favicon.png" type="image/x-icon">
 </head>
 <body>
     <header>
         <div class="header-content">
             <h1>#standforukraine</h1>
         </div>
-        <a href="index.html">Back to Home</a>
+        <a href="index.html"><span class="backtohome">Back to Home</span></a>
     </header>
     <main>
         <div class="banner">
@@ -20,10 +21,11 @@
                 <h1>93% of Ukrainians are</h1>
                 <h1>experiencing stress,</h1>
                 <h1>anxiety, and PTSD</h1>
+                <div class="caption">
+                    <p>Georgiy Keburia walks along the train, crying. His family left for Poland, and he stayed behind, like many others, to defend Ukraine. <br> <small>Photo by Salwan Georges</small></p>
+                </div>
             </div>
-            <div class="caption">
-                <p>Georgiy Keburia walks along the train, crying. His family left for Poland, and he stayed behind, like many others, to defend Ukraine. <br> <small>Photo by Salwan Georges</small></p>
-            </div>
+
             <div class="learnmore">
                 <h2>Explore the pages below to learn more:</h2>
             </div>
