--- a/stressors.html
+++ b/stressors.html
@@ -3,27 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>StandForUkraine</title>
+    <title>StandForUkraine | Stressors</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="favicon.png" type="image/x-icon">
 </head>
 <body>
     <header>
         <div class="header-content">
             <h1>#standforukraine</h1>
         </div>
-        <a href="index.html">Back to Home</a>
+        <a href="index.html"><span class="backtohome">Back to Home</span></a>
     </header>
     <main>
         <div class="banner">
             <img src="img3 - Copy.jpg" alt="">
             <div class="bannertext">
                 <h1>Ukrainians are</h1>
-                <h1>Facing unique stressors </h1>
-                <h1>amidst the war's chaos</h1>
+                <h1>Facing many stressors </h1>
+                <h1>amidst the chaos</h1>
+                <div class="caption">
+                  <p>Ilona Koval weeps as she and her family have to leave their home behind to seek shelter at a temporay refugee camp on the border. <br> <small>Photo by Laetitia Vancon</small></p>
+              </div>
             </div>
-            <div class="caption">
-              <p>Ilona Koval weeps as she and her family have to leave their home behind to seek shelter at a temporay refugee camp on the border. <br> <small>Photo by Laetitia Vancon</small></p>
-          </div>
+
             <div class="learnmore">
                 <h2>Explore the pages below to learn more:</h2>
             </div>
