--- a/disorders.html
+++ b/disorders.html
@@ -22,7 +22,7 @@
                 <h1>both physical and </h1>
                 <h1>mental health</h1>
                 <div class="caption">
-                  <p>A local resident walks by a bilding recently hit by an airstrike, unfazed. <br><small>Photo by Marcus Yam</small></p>
+                  <p>A local resident walks by a building recently hit by an airstrike, unfazed. <br><small>Photo by Marcus Yam</small></p>
               </div>
             </div>
             <div class="learnmore">
@@ -40,20 +40,37 @@
             </ul>
         </nav>
         <div class="background">
-        <h3>heading</h3>
+        <h3>Resulting Disorders</h3>
         <blockquote>
           "PTSD symptoms include terrifying and realistic flashbacks of war scenes, intrusive memories of the trauma, panic, inability to sleep and nightmares, as well as avoidance of anything that resembles the trauma." - <a href="https://www.scientificamerican.com/article/ukrainians-face-lasting-psychological-wounds-from-russian-invasion1/"><small>ARASH JAVANBAKHT & THE CONVERSATION US</small></a> 
         </blockquote>
             <div class="maininfo">
-              <p>
-                text
-              </p>
-              <p>
-                text
-              </p>
-              <p>
-                text
-              </p>
+              <p>As a result of the chronic stress Ukrainians face, they are in danger of developing physical and psychological disorders. Below are detailed examples of each:</p>
+
+    <h4>Physical Disorders:</h4>
+    <ol>
+        <li>
+            <h5>Chronic Pain and Physical Disabilities:</h5><br>
+            The chronic stress and ongoing trauma caused by the war may lead to the development of chronic pain conditions. Experiencing chronic anxiety can lead to tense muscles that eventually become sore and cause pain. Additionally, internally displaced persons must constantly be on the move, sometimes not getting to rest for days, which can also result in muscle soreness.<br><br>
+            Many Ukrainians have suffered injuries due to the war, from shelling, explosions, mines, conflict, travelling in rough conditions, harsh weather, etc. Many have been left permanently disfigured, paralyzed, or have lost limbs. These are injuries these individuals will have to live with for the rest of their lives.
+        </li>
+        <li>
+            <h5>Malnutrition and Health Conditions:</h5>
+            Due to the war, access to resources is severely limited in some regions. Many people do not have access to food or necessities, either because these facilities or the infrastructure to deliver to them have been destroyed or it’s too dangerous to leave the bomb shelters. This lack of food and access to healthcare can lead to malnutrition. In combination with the stress caused by the war, this can lead to further health issues, such as gastrointestinal issues and a weakened immune system.<br>
+        </li>
+    </ol>
+
+    <h4>Psychological Disorders:</h4>
+    <ol>
+        <li>
+            <h5>PTSD (Post-traumatic stress disorder):</h5>
+            Majority of Ukrainians are believed to be suffering from PTSD since the war started. Being under the constant threat of attack, worrying about your family, friends and home, and the uncertainty of what’s to come, coupled with the terrifying violence and destruction that comes with war can lead to the development of PTSD. Symptoms of PTSD include intrusive memories, flashbacks, hypervigilance, avoidance of triggers, and emotional numbing, significantly impacting daily functioning and quality of life.
+        </li>
+        <li>
+            <h5>Anxiety and Depression:</h5>
+            Many Ukrainians have suffered great loss during this war. Losing loved ones, beloved pets, their homes, and having their lives turned upside down is very traumatizing. The constant grief, feelings of helplessness and unparalleled fear can contribute to the development of anxiety disorders and depression. This issue is further intensified by the fact that access to mental health services is severely limited for those in war-torn areas.
+        </li>
+    </ol>
             </div>
             </div>
     </main>
