Miscellanious formatting adjustments.

--- a/management.html
+++ b/management.html
@@ -18,9 +18,9 @@
         <div class="banner">
             <img src="img8 - Copy.jpg" alt="">
             <div class="bannertext">
-                <h1>Ukrainian Refugees</h1>
-                <h1>experince more stress than</h1>
-                <h1>any other</h1>
+                <h1>Techniques</h1>
+                <h1>to help cope with</h1>
+                <h1>stress and PTSD</h1>
                 <div class="caption">
                   <p>A rainbow behind a recently destroyed apartment building in Borodianka, Ukraine. <small><br>Photo by Paula Bronstein</small></p>
                 </div>
@@ -41,21 +41,33 @@
             </ul>
         </nav>
         <div class="background">
-        <h3>heading</h3>
+        <h3>Stress Management Techniques</h3>
           <blockquote>
-            quote <small>source</small>
+            "Recovery after a traumatic event is a process that takes time. If you take direct action to cope with your stress reactions it may create a sense of power." -  <small><a target="blank" href="https://www.ptsd.va.gov/gethelp/coping_stress_reactions.asp">National Center for PTSD</small></a>
           </blockquote>
             <div class="maininfo">
-              <p>
-                text
-              </p>
-              <p>
-                text
-              </p>
-              <p>
-                text
-              </p>
-            </div>
+              <section>
+                <h4>Educate Yourself: Understanding Anxiety & PTSD</h4>
+                <p><strong>Summary:</strong> It's crucial to understand that anxiety is a normal response to danger, but it becomes problematic when the body perceives danger where there is none. Educating yourself about PTSD helps recognize that the symptoms experienced are due to anxiety from a traumatic event, not a sign of going crazy.</p>
+                <p><strong>Instructions:</strong> Start by learning about anxiety and PTSD. Recognize that your fears and physical sensations have a name: anxiety. Understand that experiencing PTSD symptoms like nightmares or flashbacks doesn't mean you're crazy, but rather experiencing anxiety due to trauma. Knowing this is the first step towards managing anxiety.</p>
+            </section>
+            <section>
+                <h4>Building Your Anxiety Management Toolbox</h4>
+                  <h5>Tool #1: Calm Breathing</h5>
+                    <p><strong>Summary:</strong> Calm breathing is a portable technique to reduce anxiety throughout the day. It helps decrease anxious feelings quickly.</p>
+                    <p><strong>Instructions:</strong> Practice calm breathing by taking slow, deep breaths. Focus on inhaling deeply through your nose, holding for a moment, then exhaling slowly through your mouth. Keep your eyes open during this practice, especially if you experience flashbacks or dissociation.</p>
+                  <h5>Tool #2: Progressive Muscle Relaxation (PMR)</h5>
+                    <p><strong>Summary:</strong> PMR teaches how to relax tense muscles, which can be helpful for individuals with PTSD who are often tense throughout the day.</p>
+                    <p><strong>Instructions:</strong> Practice PMR by tensing and then relaxing each muscle group in your body, starting from your toes and working up to your head. Focus on the feeling of tension leaving your muscles as you relax them.</p>
+                  <h5>Tool #3: Grounding Techniques</h5>
+                    <p><strong>Summary:</strong> Grounding helps to stay present and reduce dissociation or flashbacks. It involves focusing on the present moment or redirecting attention to something tangible.</p>
+                    <p><strong>Instructions:</strong> Engage in grounding techniques by touching objects around you and describing them, running water over your hands while describing the sensation, or naming different animals, flowers, or objects around you. These actions help bring focus back to the present moment.</p>
+            </section>
+            <section>
+                <h4>Getting Back into Your Life</h4>
+                <p><strong>Summary:</strong> Reconnecting with activities and routines you enjoy helps combat isolation and improve overall well-being.</p>
+                <p><strong>Instructions:</strong> Start with small, pleasant activities if returning to your usual routine feels overwhelming. Meet a friend for coffee, watch a movie, or take a short walk. Even small steps towards resuming normal activities are positive.</p>
+            </section>
             </div>
     </main>
 
