--- a/resources.html
+++ b/resources.html
@@ -18,9 +18,9 @@
         <div class="banner">
             <img src="resourcescopy.jpg" alt="">
             <div class="bannertext">
-                <h1>Ukrainian Refugees</h1>
-                <h1>experince more stress than</h1>
-                <h1>any other</h1>
+                <h1>Resources available</h1>
+                <h1>to Ukrainian refugees</h1>
+                <h1>comming to Canada</h1>
                 <div class="caption">
                   <p>A woman reads a book to distract the children from the bombing above while they take cover in a subway station.<br><small>Photo by Timothy Fadek</small></p>
               </div>
@@ -41,20 +41,24 @@
             </ul>
         </nav>
         <div class="background">
-        <h3>heading</h3>
+        <h3>Resources for Ukrainian Refugees in Canada</h3>
           <blockquote>
-            quote <small>source</small>
+            The <a target="blank" href="https://www.newcomernavigation.ca/en/our-tools/ukrainian-toolkit.aspx"><b>Ukraine Evacuee Toolkit</b></a> provides resources for newcomers to Canada that include where to get reliable information, cultural support and integration, immagration pathways, information about trauma and more.
           </blockquote>
             <div class="maininfo">
               <p>
-                text
-              </p>
-              <p>
-                text
-              </p>
-              <p>
-                text
-              </p>
+                &nbsp; The following website from the National Newcomer Navigation Network, <a style="color:whitesmoke" href="https://www.newcomernavigation.ca/en/our-tools/ukrainian-toolkit.aspx">https://www.newcomernavigation.ca/en/our-tools/ukrainian-toolkit.aspx</a>, has links to all sorts of resources available to Ukrainian refugees comming to Canada. Specifically, for those coming to Ontario, <a style="color:whitesmoke" href="https://www.ontario.ca/page/coming-ontario-ukraine">this link</a> has informtion on what support Ukrainians will recieve from the Canadian and Ontario Government, as well as organizations in the community. There resources for finding housing, health care, language training, employment help, and many more.
+              </p><br>
+              <section>
+                <h5>Additional resources that can be found in majority of communities are:</h5><br>
+                <ul>
+                  <li><b>Food Banks</b> Food banks and community meal programs provide access food for those in need. Refugees can visit local food banks or community centers to access food assistance. Examples include Daily Bread Food Bank and The Stop Community Food Centre.</li><br>
+                  <li><b>Language Classes:</b>Learning English or French is essential for integration into Canadian society. Many community organizations and libraries offer free language classes. For instance, the Toronto Public Library's Language Learning Program.</li><br>
+                  <li><b>Employment Services:</b>Employment agencies and job search programs help refugees find employment opportunities, build resumes, and prepare for interviews. Examples include Skills for Change and JobStart.</li><br>
+                  <li><b>Counseling for Mental Health Support: </b>Many organizations offer free counseling and mental health support services for refugees. Examples include Centre for Addiction and Mental Health (CAMH) and WoodGreen Community Services.</li><br>
+                  <li><b>Educational Support:</b>Refugees can access educational support services to help with school enrollment, tutoring, and navigating the education system. Examples include CultureLink Newcomer Family Centre and World Skills Employment Centre.</li>
+                </ul>
+                </section>
             </div>
             </div>
     </main>
