--- a/support.html
+++ b/support.html
@@ -19,9 +19,9 @@
             <img src="img2 - Copy.jpg" alt="photo by By Kyle Almond and Brett Roegiers, CNN
             May 13, 2022">
             <div class="bannertext">
-                <h1>Ukrainian Refugees</h1>
-                <h1>experince more stress than</h1>
-                <h1>any other</h1>
+                <h1>How you can</h1>
+                <h1>help refugees make</h1>
+                <h1>the transition</h1>
                 <div class="caption">
                   <p>A soldier assits a couple with carrying their baby across a destroyed bridge in Irpin.<br><small>Photo by Timothy Fadek</small></p>
               </div>
@@ -42,20 +42,21 @@
             </ul>
         </nav>
         <div class="background">
-        <h3>heading</h3>
+        <h3>How Can You Help?</h3>
           <blockquote>
-            quote <small>source</small>
+            "Canada remains strong in its commitment to help those affected by Russia’s invasion of Ukraine. Canadians can support Ukrainians in Canada and abroad by donating to and supporting these trusted organizations and initiatives." - <a href="https://www.canada.ca/en/immigration-refugees-citizenship/services/immigrate-canada/ukraine-measures/help.html"><small>Government of Canada</small></a>
           </blockquote>
             <div class="maininfo">
               <p>
-                text
+                <a style="color:white" href="https://www.canada.ca/en/immigration-refugees-citizenship/services/immigrate-canada/ukraine-measures/help.html">The Government of Canada</a> website has links to charities to which you can donate. These include CISSA, the Canadian Immigrant Settlement Sector Alliance, the United Nations Refugee Agency and the Humanitarian Coalition. 
               </p>
               <p>
-                text
+                These organizations provide humanitarian aid and medical assistance to Ukraine, offering support in the form of medical supplies, emergency kits, and essential medicines to hospitals and healthcare facilities in affected areas. They work to ensure that medical professionals have the resources they need to provide care to those impacted by the conflict.
               </p>
               <p>
-                text
+                Additionally, the <b>International Rescue Committee</b> aids Ukrainian refugees by providing essential services such as healthcare, shelter, and protection. They focus on meeting the immediate needs of displaced individuals and families, offering support to help them rebuild their lives in safer environments. Additionally, the IRC advocates for policies that protect the rights and well-being of refugees.
               </p>
+              <p>Lastly, the <b>UNICEF</b>(United Nations International Children's Emergency Fund) works to protect the rights and well-being of children affected by the conflict in Ukraine. They provide essential services such as healthcare, education, nutrition, and psychosocial support to children and families impacted by the crisis. UNICEF also advocates for the protection of children's rights and supports efforts to ensure their safety and well-being in times of crisis.</p>
             </div>
             </div>
     </main>
